Fix alignment & missing all icon on contact page

--- a/sass/custom/_icons.scss
+++ b/sass/custom/_icons.scss
@@ -1,6 +1,8 @@
 // Icons
 .icon {
     display: inline-flex;
+    width: 1em;
+    position: relative;
 }
 
 .icon svg,
@@ -12,6 +14,6 @@
 
 .icon.baseline svg,
 .icon.baseline img {
-    bottom: 0.125em;
-    position: relative;
+    position: absolute;
+    bottom: -0.25em;
 }
